# soreike

./: Cargo.toml  Dockerfile  service.yaml
.github/workflows/: deploy.yml
src/: anpanman.rs  main.rs
