[package]
edition = "2021"
name = "soreike"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
slack_api = {version = '0.23.1', features = ["sync", "reqwest_blocking"]}

[patch.crates-io]
slack_api = {git = 'https://github.com/silverjam/slack-rs-api', branch = 'master'}
