[package]
edition = "2021"
name = "soreike"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
dotenv = "0.15.0"
rand = "0.8.5"
serde = {version = "1.0.136", features=["derive"]}
serde_json = "1.0.79"
slack_api = {version = '0.23.1', features = ["sync", "reqwest_blocking"]}
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"

[patch.crates-io]
slack_api = {git = 'https://github.com/silverjam/slack-rs-api', branch = 'master'}
